<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="back_button" translatable="false">Back button</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>

    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message_default">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="not_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью \n \n Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>

    <string name="history_title">Вы искали</string>
    <string name="history_clear">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="title">Заголовок</string>
    <string name="artist">Исполнитель</string>

    <string name="library">Медиатека</string>
    <string name="library_empty">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
</resources>