<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_btn"
            android:text="@string/search"
            app:icon="@drawable/search"
            style="@style/MainButtonStyle"
           />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/library_btn"
            android:text="@string/media_library"
            app:icon="@drawable/library"
            style="@style/MainButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_btn"
            android:text="@string/settings"
            app:icon="@drawable/settings"
            style="@style/MainButtonStyle"/>
    </LinearLayout>

</LinearLayout>