<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="36dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/arrow_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:text="@string/settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_item_mt"
            android:layout_marginBottom="@dimen/settings_item_mb"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/dark_theme"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/settings_item_size" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="6dp"
                android:backgroundTint="#966456" />
        </LinearLayout>


        <TextView
            android:id="@+id/share"
            style="@style/SettingsItemTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/share_app"
            app:drawableEndCompat="@drawable/share" />

        <TextView
            android:id="@+id/support"
            style="@style/SettingsItemTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/write_support"
            app:drawableEndCompat="@drawable/support" />


        <TextView
            android:id="@+id/terms_of_use"
            style="@style/SettingsItemTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/terms_of_use"
            app:drawableEndCompat="@drawable/arrow_forward" />


    </LinearLayout>
</LinearLayout>