<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.SettingsTheme"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".search.presentation.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:text="@string/settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/dark_theme"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/settings_item_size"
            android:layout_marginTop="@dimen/settings_item_mt"
            android:layout_marginEnd="@dimen/settings_item_me"
            app:thumbTint="@color/swith_thumb"
            app:trackTint="@color/swith_track"/>

        <TextView
            android:id="@+id/share"
            style="@style/SettingsItemTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/share_app"
            app:drawableEndCompat="@drawable/share" />

        <TextView
            android:id="@+id/support"
            style="@style/SettingsItemTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/write_support"
            app:drawableEndCompat="@drawable/support" />

        <TextView
            android:id="@+id/terms_of_use"
            style="@style/SettingsItemTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/terms_of_use"
            app:drawableEndCompat="@drawable/arrow_forward" />

    </LinearLayout>
</LinearLayout>