<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="12dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/back_button"
            android:src="?attr/customReference"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:text="@string/search"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="26sp"
            android:textStyle="bold"
            android:fontFamily="@font/ys_display_regular"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/search_string"
            android:drawablePadding="8dp"
            android:hint="@string/search"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:paddingHorizontal="35dp"
            android:paddingVertical="10dp"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/search_small"
            android:layout_gravity="start"
            android:background="@android:color/transparent"/>

        <ImageView
            android:id="@+id/clear_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="5dp"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/clear"
            android:visibility="gone"
            android:layout_gravity="end"
            android:drawableTint="@color/YP_gray"
            android:background="@android:color/transparent" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/history_title"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="@font/ys_display_regular"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_history_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/history_clear"
        android:textColor="@color/update_btn_text"
        android:backgroundTint="@color/update_btn_bg"
        app:cornerRadius="54dp"
        android:textFontWeight="500"
        android:textSize="@dimen/textSize_14"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="@dimen/margin_16"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="@dimen/margin_16"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="@font/ys_display_regular"
        android:visibility="invisible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/update"
        android:textColor="@color/update_btn_text"
        android:backgroundTint="@color/update_btn_bg"
        app:cornerRadius="54dp"
        android:textFontWeight="500"
        android:textSize="@dimen/textSize_14"
        android:visibility="invisible"
        android:layout_marginTop="24dp"
        />


</LinearLayout>