<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TrackActivity">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/back_button"
            android:src="?attr/customReference"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageView
            android:id="@+id/track_image_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:backgroundTint="@color/track_image_bg"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/back_btn" />

        <TextView
            android:id="@+id/track_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="Yesterday (Remastered 2009)"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/track_image_iv" />

        <TextView
            android:id="@+id/track_artist_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="The Beatles "
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/track_title_tv" />

        <ImageButton
            android:id="@+id/to_playlist_btn"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/to_playlist_btn"
            app:layout_constraintEnd_toStartOf="@+id/play_btn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/track_artist_tv" />

        <ImageButton
            android:id="@+id/play_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/play_btn"
            app:layout_constraintBottom_toBottomOf="@+id/to_playlist_btn"
            app:layout_constraintEnd_toStartOf="@+id/like_btn"
            app:layout_constraintStart_toEndOf="@+id/to_playlist_btn"
            app:layout_constraintTop_toBottomOf="@+id/track_artist_tv" />

        <ImageButton
            android:id="@+id/like_btn"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/like_btn"
            app:layout_constraintBottom_toBottomOf="@+id/play_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play_btn"
            app:layout_constraintTop_toBottomOf="@+id/track_artist_tv" />

        <TextView
            android:id="@+id/current_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="0:30"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/play_btn"
            app:layout_constraintStart_toStartOf="@id/play_btn"
            app:layout_constraintTop_toBottomOf="@+id/play_btn" />

        <TextView
            android:id="@+id/duration_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="30dp"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="@string/duration"
            android:textSize="12sp"
            android:textColor="@color/track_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_time_tv" />

        <TextView
            android:id="@+id/duration_track_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="5:35"
            android:textSize="12sp"
            android:textColor="@color/track_info_data"
            app:layout_constraintBottom_toBottomOf="@+id/duration_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/duration_title_tv" />

        <TextView
            android:id="@+id/album_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="@string/album"
            android:textSize="12sp"
            android:textColor="@color/track_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duration_title_tv" />

        <TextView
            android:id="@+id/album_track_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="Spider-Man: Into thure)pider-Man: Into thure"
            android:textSize="12sp"
            android:textColor="@color/track_info_data"
            app:layout_constraintBottom_toBottomOf="@+id/album_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/album_title_tv" />

        <TextView
            android:id="@+id/year_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="@string/year"
            android:textSize="12sp"
            android:textColor="@color/track_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/album_title_tv" />

        <TextView
            android:id="@+id/year_track_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="1965"
            android:textSize="12sp"
            android:textColor="@color/track_info_data"
            app:layout_constraintBottom_toBottomOf="@+id/year_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/year_title_tv" />

        <TextView
            android:id="@+id/genre_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="@string/genre"
            android:textSize="12sp"
            android:textColor="@color/track_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/year_title_tv" />

        <TextView
            android:id="@+id/genre_track_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="Rock"
            android:textSize="12sp"
            android:textColor="@color/track_info_data"
            app:layout_constraintBottom_toBottomOf="@+id/genre_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/genre_title_tv" />

        <TextView
            android:id="@+id/country_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginBottom="20dp"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="@string/country"
            android:textSize="12sp"
            android:textColor="@color/track_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre_title_tv" />

        <TextView
            android:id="@+id/country_track_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="Великобритания"
            android:textSize="12sp"
            android:textColor="@color/track_info_data"
            app:layout_constraintBottom_toBottomOf="@+id/country_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/country_title_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>